--- a/apache.conf
+++ b/apache.conf
@@ -4,10 +4,16 @@
     LoadTileConfigFile /usr/local/etc/renderd.conf
     ModTileRenderdSocketName /var/run/renderd/renderd.sock
     ModTileRequestTimeout 0
-    ModTileMissingRequestTimeout 30
+
+    # Increase timeouts to prevent 404 errors
+    ModTileMissingRequestTimeout 3000
+    ModTileMaxLoadMissing 5000
 
     DocumentRoot /var/www/html
 
     ErrorLog ${APACHE_LOG_DIR}/error.log
     CustomLog ${APACHE_LOG_DIR}/access.log combined
+
+    # More verbose logging
+    LogLevel debug
 </VirtualHost>
