Modify apache to support cross origin headers

--- a/apache.conf
+++ b/apache.conf
@@ -1,6 +1,10 @@
 <VirtualHost *:80>
     ServerAdmin webmaster@localhost
 
+    # Allow access control origin .e.g. necessary for grayscale
+    # Requires mod_headers to be enabled
+    Header set Access-Control-Allow-Origin "*"
+
     LoadTileConfigFile /usr/local/etc/renderd.conf
     ModTileRenderdSocketName /var/run/renderd/renderd.sock
     ModTileRequestTimeout 0
