Added HTTPS vhost, postgresql tuning

--- a/apache.conf
+++ b/apache.conf
@@ -1,5 +1,31 @@
 <VirtualHost *:80>
-    ServerAdmin webmaster@localhost
+    ServerAdmin assistenza@cogitoweb.it
+
+    # Allow access control origin .e.g. necessary for grayscale
+    # Requires mod_headers to be enabled
+    Header set Access-Control-Allow-Origin "*"
+
+    LoadTileConfigFile /usr/local/etc/renderd.conf
+    ModTileRenderdSocketName /var/run/renderd/renderd.sock
+    ModTileRequestTimeout 0
+
+    # Increase timeouts to prevent 404 errors
+    ModTileMissingRequestTimeout 3000
+    ModTileMaxLoadMissing 5000
+
+    DocumentRoot /var/www/html
+
+    ErrorLog ${APACHE_LOG_DIR}/error.log
+    CustomLog ${APACHE_LOG_DIR}/access.log combined
+
+    # More verbose logging
+    LogLevel debug
+</VirtualHost>
+<VirtualHost *:443>
+    ServerAdmin assistenza@cogitoweb.it
+
+    SSLEngine on
+    SSLCertificateFile /etc/ssl/cogito/cogitoweb.pem
 
     # Allow access control origin .e.g. necessary for grayscale
     # Requires mod_headers to be enabled
