--- a/postgresql.conf
+++ b/postgresql.conf
@@ -2,7 +2,21 @@ max_connections = 250
 
 shared_buffers = 6GB
 work_mem = 64MB
-maintenance_work_mem = 2GB
+maintenance_work_mem = 8GB
+
+effective_io_concurrency = 500
+max_worker_processes = 2
+max_parallel_workers_per_gather = 2
+max_parallel_workers = 2
+
+checkpoint_timeout = 1h
+max_wal_size = 5GB
+min_wal_size = 1GB
+checkpoint_completion_target = 0.9
+
+random_page_cost = 1.1
+min_parallel_table_scan_size = 8MB
+min_parallel_index_scan_size = 512kB
 
 effective_cache_size = 8GB
 track_counts = on
